Clean up Messaging&ConversationLayout
Fixed some IDE warnings and removed some unused code.

Flag: EXEMPT minor cleanup
Test: existing tests pass
Change-Id: I8c48d0597c2e046a9be4e2150882398ac26b2801